Minor style fix for rare, superfluous scrollbars

--- a/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/views/thinclients.scss
+++ b/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/views/thinclients.scss
@@ -223,7 +223,7 @@ $ok-button-color: #2db200;
 
       .panelRows {
         flex: 1;
-        overflow: auto;
+        overflow: hidden auto;
         border: 1px solid silver;
         border-width: 0 1px;
 
